# NIRB_FaultConvection

./: .gitignore  .gitmodules  README.md  batch_script.sh  comsol_classes.py  config.ini  hello.py  pyproject.toml
NIRB/: 01_sampling.py  02_nirb_loop.py  training_samples.csv
Snapshots/01/: test_samples.csv
Snapshots/02/: test_samples.csv  training_samples.csv
Snapshots/03/: test_samples.csv  training_samples.csv
Surrogate_NIRB/: 03_pod.py  03_quality_check.py  A_plot_samples.ipynb  A_sampling.py  C_quality_check.py  C_quality_check_plots.ipynb  D_pod.py  D_quality_check.ipynb  E_coefficients_model.py  E_quality_check.ipynb  E_sweep.py  helpers.py  merge.ipynb
data/04/: link_boersing.py
data/06/: verify_NIRB.py
notebooks/: A_plot_samples.ipynb  C_check_morphology.ipynb  C_entropy_qc.ipynb  C_entropy_vs_n_cells.ipynb  C_plot_scaled_vs_unscaled_data.ipynb  C_quality_check_plots.ipynb  D_quality_check.ipynb  E_analyse_sweep.ipynb  E_online_stage.ipynb  F_sensitivity_analysis.ipynb  merge.ipynb
scr/offline_stage/: __init__.py  data_module.py  lightning_modules.py  neural_network.py
scr/pod/: __init__.py  normalizer.py  pod_class.py
scr/sampling/: __init__.py
scr/utils/: __init__.py  geometry.py  helpers.py  pint_units.py
scripts/: A_sampling.py  B_compute_snapshots.py  B_nirb_loop.py  C_calculate_entropy.py  C_calculate_entropy_from_export.py  C_calculate_entropy_from_mesh.py  C_check_morphology.py  C_compute_rayleigh.py  C_map_on_control_mesh.py  C_merge_plot_snapshots.py  C_process_map_export.py  D_plot_scaled_vs_unscaled.py  D_pod.py  D_pod_zero_crossings.py  E_coefficients_model.py  E_coefficients_model_zero_crossings.py  E_quality_check.py  E_quality_check_zero_crossings.py  E_sweep.py  E_sweep_zero_crossings.py  E_zero_crossings_online_stage.py  F_sensitivity_analysis.py  Z_write_config.py
src/: D_pod.py
src/offline_stage/: __init__.py  data_module.py  database.py  lightning_modules.py  neural_network.py
src/pod/: __init__.py  normalizer.py  pod_class.py
src/sampling/: parameter_class.py
src/utils/: __init__.py  config.py  geometry.py  helpers.py  pint_units.py
tests/SAlib/: test_salib.py
(+9 files in other folders)
