[project]
name = "nirb"
version = "0.1.0"
description = "NIRB for convection along fault."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "lightning>=2.5.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pint-pandas>=0.7.1",
    "pydantic>=2.11.3",
    "pydoe>=0.3.8",
    "pyvista>=0.44.2",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "JPype1",
]

[project.optional-dependencies]
plotting = [
    "plotly>=6.0.1",
    "trame>=3.8.2",
    "trame-vtk>=2.8.15",
    "trame-vuetify>=3.0.0",
    "matplotlib>=3.10.1",
    "imageio[ffmpeg]>=2.37.0", # for mp4 export
]
jupyter = [
    "jupyterlab>=4.4.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "trame-jupyter-extension>=2.1.4",
]
dev = ["vtk>=9.3.1", "autopep8>=2.3.2"]
