[project]
name = "nirb"
version = "0.1.0"
description = "NIRB for convection along fault."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "lightning>=2.5.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pint-pandas>=0.7.1",
    "pydantic>=2.11.3",
    "pydoe>=0.3.8",
    "pyvista>=0.44.2",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "JPype1",
    "vtk>=9.3.1",
]

[project.optional-dependencies]
plotting = [
    "plotly>=6.0.1",
    "trame>=3.8.2",
    "trame-vtk>=2.8.15",
    "trame-vuetify>=3.0.0",
    "matplotlib>=3.10.1",
    "imageio[ffmpeg]>=2.37.0", # for mp4 export
    "kaleido",
]
jupyter = [
    "jupyterlab>=4.4.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "trame-jupyter-extension>=2.1.4",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "tensorboard>=2.19.0",
    "torchinfo>=1.8.0",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
    "optuna-fast-fanova>=0.0.4",
    "gunicorn>=23.0.0",
    "pytest>=8.3.5",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
